Fix layout issues when zoomed out
Keep the footer at the bottom. Make the main
content grow and stay vertically aligned. Without
a minimum body height, a gap is left under the
footer. Without causing sections two, three, and
four to grow, there is a large gap between the
footer and the section above the footer. Layout
is now properly aligned when zoomed out.

--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,18 @@ html {
 
 body {
     font-family: Roboto, "Courier New", monospace;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-}
-
-.fill {
-    flex: 1;
 }
 
 .section-one {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-shrink: 0;
 }
 
 .header {
@@ -84,12 +81,17 @@ a {
 
 .section-two {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 30px;
+    flex: 1;
 }
 
 .two-title {
     font-size: 36px;
     font-weight: bold;
-    margin-bottom: 30px;
+    margin: 30px 0;
 }
 
 .solution-container {
@@ -109,7 +111,9 @@ a {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    flex: 1;
 }
 
 .three-content {
@@ -133,12 +137,14 @@ a {
 .section-four {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex: 1;
 }
 
 .four-content {
     width: 1000px;
     padding: 30px 20px;
-    margin: 10px 0 40px;
+    margin: 40px 0;
     border-radius: 8px;
     display: flex;
     justify-content: space-around;
@@ -162,7 +168,7 @@ a {
     text-align: center;
     color: #E5E7EB;
     padding: 30px;
-    margin-top: -30px;
+    flex-shrink: 0;
 }
 
 button {
